# Tanergy

./: .env.example  .gitignore  .vercelignore  AGENTS.md  ARCH.md  DEPLOY.md  ENG-HARNESS.md  HARNESS.md  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  project_state.md  projectstate.md
PRD/: PRD.md  (+11 more)
services/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/api/migrations/: env.py  script.py.mako
services/api/scripts/: bootstrap_local_admin.py  group_collaborate_removal_preflight.py  ops_external_proof_smoke.py  ops_readiness_smoke.py  run_local_api.py  s1a_migration_smoke.py  s1c_remote_admin_smoke.py  s2_live_ai_smoke.py  s3_admin_bootstrap.py  s3_local_admin_smoke.py  s4_collaboration_presence_smoke.py  s4_collaboration_readiness.py  s4_realtime_multiplayer_load.py  s4_realtime_multiplayer_load_support.py  s4_realtime_resync_smoke.py  s4_workspace_invite_smoke.py  security_api_performance_smoke.py  security_deploy_config_smoke.py  security_object_storage_smoke.py  security_redis_smoke.py  security_release_gate.py  security_staging_auth_smoke.py  seed_admin_operator_demo.py
services/api/tangent_api/: __init__.py  admin_access.py  admin_access_audit.py  admin_access_reads.py  admin_access_writes.py  admin_ai_analytics.py  admin_ai_analytics_schemas.py  admin_ai_control_plane.py  admin_ai_control_plane_reads.py  admin_ai_control_plane_schemas.py  admin_ai_control_plane_support.py  admin_ai_control_plane_writes.py  admin_ai_route_metrics_aggregation.py  admin_ai_runtime_reads.py  admin_ai_runtime_schemas.py  admin_ai_version_ops.py  admin_ai_version_support.py  admin_ai_versions.py  admin_bootstrap_schemas.py  admin_directory.py  admin_directory_schemas.py  admin_directory_users.py  admin_finance_manual.py  admin_finance_manual_ops.py  admin_finance_manual_plan_context.py  admin_finance_manual_plan_lifecycle.py  admin_finance_manual_plan_operations.py  admin_finance_manual_schemas.py  admin_finance_manual_subscriptions.py  admin_finance_manual_team_seats.py  admin_finance_manual_utils.py  admin_finance_manual_workspace_utils.py  admin_finance_manual_workspaces.py  admin_finance_reads.py  admin_finance_rows.py  admin_finance_schemas.py  admin_finance_summary_reads.py  admin_operator_billing_history.py  (+123 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_api_keys_ext.sql  003_credits.sql  004_mock_mode.sql
src-tauri/src/: crypto.rs  lib.rs  main.rs
(+1427 files in other folders)
