[package]
name = "tangent"
version = "0.1.0"
description = "TANGENT AI — Creative Engine"
authors = ["TANGENT"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tangent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
