[project]
name = "tangent-api"
version = "0.1.0"
description = "Fresh FastAPI service scaffold for the TANGENT Web AI image canvas."
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13,<2",
  "boto3>=1.34,<2",
  "cryptography>=45,<48",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.27,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tangent_api*"]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]
image-ops = [
  "rembg[cpu]>=2.0,<3",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
